Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-101862

[Wayland] Shortcut no longer activated after Alt+Tab when using WaylandCompositor/WaylandOutput in QML application

XMLWordPrintable

    • Linux/Wayland
    • 4910b7adfa (qt/qtwayland/dev) 4910b7adfa (qt/tqtc-qtwayland/dev)

      In an application, with a WaylandCompositor and a single WaylandOutput that contains a Window. Inside the Window is a Shortcut that logs a message to console when F1 is pressed on the keyboard. This works fine until Alt+Tab is pressed, which cycles to another open window. After selecting the QML application window again, pressing F1 no longer activates the Shortcut.

       

        1. qtbug_101862.zip
          2 kB
          Tuomas Vaarala
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            esabraha Eskil Abrahamsen Blomfeldt
            tuomas.vaarala Tuomas Vaarala
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes